# KG-Kairos_1st

./: Final_project_Electric_car  README.md  error_logging.py  py_and_comm.py  turtle_screen.py
2wheel_motor/: 2wheel_motor.ino
Arduino_lecture/OLED/: OLED.ino
Arduino_lecture/bluetooth_1/: bluetooth_1.ino
Arduino_lecture/gyro_adafruit/: gyro_adafruit.ino
Arduino_lecture/motor_starrt/: motor_starrt.ino
Final_Project/auto_ws/src/elec_charge/: CMakeLists.txt  package.xml
Final_Project/auto_ws/src/elec_charge/launch/: elec_charge.launch
Final_Project/auto_ws/src/elec_charge/src/: IR_mode_pub.py  IR_sensor_test.py  TOF_UART.py  add_manual_mode.py  charging_state.py  extracted.dts  functionalize_cam_pub.py  functionize_test.py  proj_cam_pub_with_T.py  proj_control_motor.py  temp_TOF_pub.py  temp_control_motor.py  test.py  test_IR_pub.py  test_cam_pub.py  test_control_sub.py
Final_Project/auto_ws/src/elec_charge/src/Flask/: proj_app.py
Final_Project/auto_ws/src/elec_charge/src/Flask/templates/: control.html  service.html
Final_Project/ros_serial_py/: CMakeLists.txt  package.xml
Final_Project/ros_serial_py/scripts/: ros_serial.py
Python_lecture/: idle_screen.py  idle_screen_1.py  numpy_matplotlib_openCV.ipynb  openCV2_lecture.py  py_and_comm.py  python_grammer.py  turtle_ex.py  turtle_screen.py
button/: button.ino
encoder/: encoder.ino
gyzo/: gyzo.ino
jumrope_gyzo/: jumrope_gyzo.ino
linetracing/: linetracing.ino
passometer/: passometer.ino
servo_slow/: servo_slow.ino
ssd1306/: ssd1306.ino
ultrasonic/: ultrasonic.ino
(+90 files in other folders)
