<?xml version="1.0"?>
<package format="2">
  <name>ros_serial_py</name>
  <version>0.0.0</version>
  <description>ros_serial_py package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pyserial</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
